[package]
name = "redis_rocksdb"
version = "0.3.9"
edition = "2021"
resolver = "2"
authors = ["Peace <peacess@163.com>"]
exclude = [".gitignore"]
description = "rust implement structure kv(key/value) embedded database, storage by rocksdb"
repository = "https://github.com/peacess/redis_rocksdb"
homepage = "https://github.com/peacess/redis_rocksdb"
keywords = ["redis", "rocksdb", "nosql", "kv", "embedded"]
categories = ["database"]
license = "Apache-2.0"

[lib]
name = "redis_rocksdb"
path = "src/lib.rs"

[dependencies]
log = "0.4.22"
anyhow = "1.0.94"
rust-rocksdb = { package = "rust-rocksdb", version = "0.34.0", features = ["multi-threaded-cf","lz4"],optional = true}
#rocksdb = { version = "0.22.0", features = ["multi-threaded-cf"] }
binary-heap-plus = "0.5.0"
compare = "0.1.0"
xid = "1.1.1"

[dev-dependencies]
cargo-valgrind = "2.2.1"
function_name = "0.3.0"
criterion = "0.5.1"

[[bench]]
name = "copy_vec_benchmark"
path = "benches/copy_vec_benchmark.rs"
harness = false


